--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -21,6 +21,35 @@
     p
       font-size: clamp(1rem, 4vw, 1.1rem)
 
+  .history-search-container
+    align-self: flex-start
+    width: 100%
+    max-width: 300px
+    margin-bottom: 1.5rem
+    
+    h3
+      font-size: 0.9rem
+      margin-bottom: 0.5rem
+    
+    .input-group
+      width: 100%
+      
+    .btn
+      font-size: 0.8rem
+      padding: 0.3rem 0.6rem
+    
+    input
+      font-size: 0.8rem
+      padding: 0.3rem 0.6rem
+
+  .text-left
+    text-align: left
+    margin-left: 0
+    padding-left: 0
+
+  .smaller-text
+    font-size: 0.9rem
+
   .columns
     display: flex
     justify-content: space-between
